sonar-mysql/sonar-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonar-deployment
  labels:
    app: sonar-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonar-deployment
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:6.5
        ports:
        - name: sonarqube
          containerPort: 9000
