sonar-mysql/sonar-mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonar-mysql-deployment
  labels:
    app: sonar-mysql-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonar-mysql-deployment
    spec:
      containers:
      - image: mysql:5.7
        name: sonar-mysql-deployment
        ports:
        - containerPort: 3306
