sonar-mysql/sonar-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonar
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar
          servicePort: 80
